--- a/code/settings.json
+++ b/code/settings.json
@@ -1,8 +1,17 @@
 {
-  "workbench.colorTheme": "Kanagawa",
+  "workbench.colorTheme": "Min Dark",
   "editor.fontFamily": "JetBrainsMono Nerd Font, iMWritingMonoS Nerd Font Mono,  'FiraCode Nerd Font'",
   "editor.fontLigatures": true,
-  "editor.fontSize": 16,
+  "editor.fontSize": 14,
+  "editor.lineHeight": 1.8,
+  "editor.rulers": [80, 120],
+  "editor.semanticHighlighting.enabled": false,
+  "breadcrumbs.enabled": false,
+  "editor.minimap.enabled": false,
+  "explorer.compactFolders": false,
+  "workbench.activityBar.visible": false,
+  "editor.scrollbar.horizontal": "hidden",
+  "editor.scrollbar.vertical": "hidden",
   "keyboard.dispatch": "keyCode",
   "vim.easymotion": true,
   "vim.incsearch": true,
@@ -75,7 +84,7 @@
   "emmet.excludeLanguages": ["markdown"],
   "python.languageServer": "Jedi",
   "explorer.confirmDragAndDrop": false,
-  "workbench.iconTheme": "material-icon-theme",
+  "workbench.iconTheme": "symbols",
   "workbench.sideBar.location": "right",
   "javascript.updateImportsOnFileMove.enabled": "always",
   "typescript.updateImportsOnFileMove.enabled": "always",
@@ -142,5 +151,23 @@
   },
   "[astro]": {
     "editor.defaultFormatter": "astro-build.astro-vscode"
+  },
+  "symbols.hidesExplorerArrows": false,
+  "apc.stylesheet": {
+    ".title-label > h2": "display: none",
+    ".editor-actions": "display: none"
+  },
+  "apc.listRow": {
+    "height": 24
+  },
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    "*.ts": "${capture}.js",
+    "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
+    "*.jsx": "${capture}.js",
+    "*.tsx": "${capture}.ts",
+    "tsconfig.json": "tsconfig.*.json",
+    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, .eslint*, .prettier*, .editorconfig, tsconfig.*",
+    ".env": ".env*"
   }
 }
