--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "alacritty/themes"]
 	path = alacritty/themes
 	url = https://github.com/alacritty/alacritty-theme
+[submodule "nvim/NvChad"]
+	path = nvim/NvChad
+  url = https://github.com/NvChad/NvChad
+  branch = v2.0
