--- a/code/settings.json
+++ b/code/settings.json
@@ -1,6 +1,6 @@
 {
-  "workbench.colorTheme": "Catppuccin Mocha",
-  "editor.fontFamily": "Hack",
+  "workbench.colorTheme": "Kanagawa",
+  "editor.fontFamily": "JetBrainsMono Nerd Font",
   "editor.fontLigatures": true,
   "editor.fontSize": 14,
   "editor.lineHeight": 1.8,
