--- a/code/settings.json
+++ b/code/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.colorTheme": "Kanagawa",
-  "editor.fontFamily": "Input Mono Narrow, JetBrainsMono Nerd Font",
+  "editor.fontFamily": "'Iosevka'",
   "editor.fontLigatures": true,
   "editor.fontSize": 14,
   "editor.lineHeight": 1.8,
