--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,6 +42,10 @@ bind -N "Create new session" C-c new-session
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager
 run '~/.tmux/plugins/tpm/tpm'
