--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,6 +44,7 @@ bind -N "Create new session" C-c new-session
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 set -g @continuum-restore 'on'
 
